--- a/src/new_src/pdm-notes/src/app/platform/nav/nav.component.html
+++ b/src/new_src/pdm-notes/src/app/platform/nav/nav.component.html
@@ -5,15 +5,25 @@
   fxLayoutAlign="center"
   fxLayoutGap="10px"
   fxLayoutGap.md="1">
-  <mat-drawer  #drawer mode="side" hasBackDrop="false">
-    <font color="#0d6d3b" bold="true">PDM Notes</font>
+  <mat-drawer  #drawer mode="side" hasBackDrop="false"
+  fxLayout fxLayout.md="column" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.md="1"
+  >
+      <font color="#0d6d3b" bold="true">PDM Notes</font>
+      <p color="secondary" >---</p>
+      <br>
+      <button mat-icon-button color="secondary" (click)="drawer.toggle()" class="icons">
+        Notes
+      </button>
   </mat-drawer>
+  <!-- </mat-drawer> -->
   <mat-drawer-content>
     <nav fxLayout fxLayout.md="column" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.md="1">
-      <fa-icon [icon]="faDollarSign" mat-raised-button (click)="drawer.toggle()"></fa-icon>
-
+      <button mat-icon-button color="secondary" (click)="drawer.toggle()" class="icons">
+        <mat-icon>menu</mat-icon>
+      </button>
       <h5 class="title secondary-font"> </h5>
       <fa-icon class="icons" [icon]="faLightbulb"  (click)="toggleTheme()"></fa-icon>
+
     </nav>
-    <app-main_view></app-main_view></mat-drawer-content>
+    <app-main_view><ng-content></ng-content></app-main_view></mat-drawer-content>
 </mat-drawer-container>
