--- a/src/new_src/pdm-notes/src/app/platform/userio/userio.component.html
+++ b/src/new_src/pdm-notes/src/app/platform/userio/userio.component.html
@@ -2,6 +2,6 @@
 </p>
 <form (ngSubmit)="handleSubmit($event)">
   <textarea class="inputClass2" name="msg" [(ngModel)]="msg" (keyup)="handleKeyUp($event)"></textarea>
-  <button type="submit">Submit</button>
+  <button type="submit">send</button>
 </form>
 
