--- a/src/new_src/pdm-notes/src/app/app.component.html
+++ b/src/new_src/pdm-notes/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-platform><security-cc20></security-cc20></app-platform>
+<app-platform>
+  <security-cc20></security-cc20>
+  <security-notes></security-notes>
+</app-platform>
 
 <router-outlet></router-outlet>
