--- a/src/new_src/pdm-notes/src/app/platform/platform.component.html
+++ b/src/new_src/pdm-notes/src/app/platform/platform.component.html
@@ -1,1 +1,4 @@
-<app-nav><ng-content></ng-content></app-nav>
+<app-nav>
+  <security-cc20></security-cc20>
+  <security-notes></security-notes>
+</app-nav>
