added two features

--- a/src/new_src/pdm-notes/src/app/platform/nav/nav.component.html
+++ b/src/new_src/pdm-notes/src/app/platform/nav/nav.component.html
@@ -11,9 +11,9 @@
       <font color="#0d6d3b" bold="true">PDM Notes</font>
       <p color="secondary" >---</p>
       <br>
-      <button mat-icon-button color="secondary" (click)="drawer.toggle()" class="icons">
-        Notes
-      </button>
+      <button mat-icon-button color="secondary" (click)="toNotes()" class="icons">Notes</button>
+      <br>
+      <button mat-icon-button color="secondary" (click)="toChat()" class="icons">Chat</button>
   </mat-drawer>
   <!-- </mat-drawer> -->
   <mat-drawer-content>
@@ -25,5 +25,9 @@
       <fa-icon class="icons" [icon]="faLightbulb"  (click)="toggleTheme()"></fa-icon>
 
     </nav>
-    <app-main_view><ng-content></ng-content></app-main_view></mat-drawer-content>
+    <div [ngSwitch]="this.feature">
+      <security-cc20 *ngSwitchCase="'chat'"></security-cc20>
+      <security-notes *ngSwitchCase="'notes'"></security-notes>
+    </div>
+  </mat-drawer-content>
 </mat-drawer-container>
