--- a/src/new_src/pdm-notes/src/app/security/cc20/cc20.component.html
+++ b/src/new_src/pdm-notes/src/app/security/cc20/cc20.component.html
@@ -1,4 +1,4 @@
-
+<div chat>
   <p class="terminal">
     {{term}}
   </p>
@@ -6,3 +6,4 @@
     <textarea class="inputClass2" name="msg" [(ngModel)]="msg" (keyup)="handleKeyUp($event)"></textarea>
     <button type="submit">send</button>
   </form>
+</div>
